# tianyan

./: .env.example  .gitignore  404.html  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  README.md  README_v2.md  SECURITY.md  api_keys.json  cli_v2.py  demo_server.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  index.html  index.md  pyproject.toml  requirements.txt  robots.txt  server.py  setup.py  sitemap.xml  tianyan_production.db
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
assets/: github-pages.css  home.js  report.js
billing/: app.py
dashboard/: history.html  index.html
data/: agent-profiles.json  market-scenarios.json  virtual-population.json
docs/: README.md  about.html  api.html  changelog.html  compare.html  contact.html  glossary.html  index.html  integrations.html  methodology.md  performance.html  pricing.html  quickstart.html  realistic_strategy.md  roadmap.html  robots.txt  sitemap.xml  tencent_cloud_landing_checklist.md  usecases.html
examples/: comprehensive_demo.py  full_prediction.py  glp1_full_demo.py  quickstart.py
scripts/: build_github_pages.py  mimo_live_probe.py  publish_pages_via_github_api.py  sync_from_github_api.py
src/: population_generator.py  prediction_engine.py  simulation_core.py
tests/: conftest.py  test_advanced.py  test_api.py  test_checkpoints.py  test_data_sources.py  test_demo_server.py  test_llm_adapter.py  test_tianyan.py
tianyan/: __init__.py  agents.py  checkpoints.py  china_scenarios.py  cli.py  compliance.py  conversation.py  (+12 more)
(+41 files in other folders)
