[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tianyan"
version = "1.0.0"
description = "中国版商业预测平台 — 基于多Agent人群模拟的商业决策引擎"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "MoKangMedical"}]
keywords = ["ai", "simulation", "market-prediction", "consumer-insights", "china"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "pytest-asyncio", "httpx"]
data = ["aiohttp>=3.8.0", "beautifulsoup4>=4.12.0"]

[project.scripts]
tianyan = "tianyan.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["tianyan"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
